--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@adminjs/express": "^5.0.1",
     "@adminjs/mongoose": "^3.0.1",
     "adminjs": "^6.6.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
